--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6 mix all accesories bags">
+                <div class="col-lg-3 col-sm-6 mix all accesories bags" tarde="img/products/var/log/mpd/mpd.log"/regalias">
                     <div class="single-product-item">
                         <figure>
                             <a href="#"><img src="img/products/img-6.jpg" alt=""></a>
